--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python-dotenv = "^1.0.1"
 pynacl = "^1.5.0"
 youtube-search = "^2.1.2"
 yt-dlp = "^2024.9.27"
+beautifulsoup4 = "^4.12.3"
 
 
 [build-system]
