--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,14 @@ yt-dlp = "^2024.9.27"
 beautifulsoup4 = "^4.12.3"
 
 
+[tool.poetry.group.types.dependencies]
+types-requests = "^2.32.0.20240914"
+types-beautifulsoup4 = "^4.12.0.20240907"
+
+
+[tool.poetry.group.dev.dependencies]
+mypy = "^1.11.2"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
